--- a/.gitignore
+++ b/.gitignore
@@ -1,35 +1,40 @@
+# supporting infrastructure
+firefly_python/
+firefly_pypy/
+pypy-5.3.1-linux_x86_64-portable/
+reference/hg19_adapter
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
-*$py.class
+*.pyx
 
 # C extensions
 *.so
 
+# vscode files
+.vscode
+*.code-workspace
+
+*.swp
+.idea/
+
 # Distribution / packaging
 .Python
+env/
+venv/
+bin/
 build/
 develop-eggs/
 dist/
-downloads/
 eggs/
-.eggs/
-lib/
 lib64/
 parts/
 sdist/
 var/
-wheels/
 *.egg-info/
 .installed.cfg
 *.egg
-MANIFEST
-
-# PyInstaller
-#  Usually these files are written by a python script from a template
-#  before PyInstaller builds the exe, so as to inject date/other infos into it.
-*.manifest
-*.spec
 
 # Installer logs
 pip-log.txt
@@ -39,66 +44,31 @@ pip-delete-this-directory.txt
 htmlcov/
 .tox/
 .coverage
-.coverage.*
 .cache
 nosetests.xml
 coverage.xml
-*.cover
-.hypothesis/
 .pytest_cache/
 
 # Translations
 *.mo
-*.pot
+
+# Mr Developer
+.mr.developer.cfg
+.project
+.pydevproject
+
+# Rope
+.ropeproject
 
 # Django stuff:
 *.log
-local_settings.py
-db.sqlite3
-
-# Flask stuff:
-instance/
-.webassets-cache
-
-# Scrapy stuff:
-.scrapy
+*.pot
 
 # Sphinx documentation
 docs/_build/
 
-# PyBuilder
-target/
+# emacs
+*~
 
-# Jupyter Notebook
-.ipynb_checkpoints
-
-# pyenv
-.python-version
-
-# celery beat schedule file
-celerybeat-schedule
-
-# SageMath parsed files
-*.sage.py
-
-# Environments
-.env
-.venv
-env/
-venv/
-ENV/
-env.bak/
-venv.bak/
-
-# Spyder project settings
-.spyderproject
-.spyproject
-
-# Rope project settings
-.ropeproject
-
-# mkdocs documentation
-/site
-
-# mypy
-.mypy_cache/
+# nfs
+.nfs*
