--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,7 @@ services:
 before_install:
 - docker pull jkern337/py2:latest
 - docker ps -a
+- ls -la
 
 script: 
-- docker run -v `pwd`/AUT:/data -w /data/tests jkern337/py2:latest /bin/bash -c "source /root/.bashrc && pytest"
+- docker run -v `pwd`:/data -w /data/tests jkern337/py2:latest /bin/bash -c "source /root/.bashrc && pytest"
