--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,6 @@
 lang: python 
 install:
-- git clone git@github.com:kern3020/AUT.git source
+-  git clone --depth=50 https://github.com/kern3020/AUT.git source
 
 jobs:
   include:
